# reddit-images-extractor-and-ml-classifier

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/: deploy.yml
.github/workflows/: deploy.yml
app/: main.py  update_local_db.py
app/api/: token.py
app/db/aws/: db_config.py
app/db/config/: db_config.py
app/db/entities/: UserImages.py
app/db/gdrive/: db_config.py  drive_service.py  errors.py
app/settings/: creds.py
app/utils/: update_local_db.py  upload_local_db.py
notebooks/: image_classification_with_cnn.ipynb
workflows/: deploy.yml
